--- a/机器学习/2model.ipynb
+++ b/机器学习/2model.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NLP"
+    "# NLP"
    ]
   },
   {
@@ -40,7 +40,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "CV"
+    "# CV"
    ]
   },
   {
@@ -109,7 +109,8 @@
     }
    ],
    "source": [
-    "### 加载CV领域的模型结构（方法一）\n",
+    "## 加载CV领域的模型结构（方法一）\n",
+    "\n",
     "# 参考链接：https://blog.csdn.net/me_yundou/article/details/109218273\n",
     "import torch\n",
     "import torchvision\n",
@@ -136,7 +137,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### 加载CVCV领域的模型结构（方法二）\n",
+    "## 加载CVCV领域的模型结构（方法二）\n",
+    "\n",
     "import timm\n",
     "model = timm.create_model('vgg19',pretrained=True)\n",
     "# model = timm.create_model(\"hf_hub:timm/vgg19.tv_in1k\", pretrained=True)"
@@ -144,9 +146,275 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d2805ff7",
    "metadata": {},
    "source": [
-    "保存与加载"
+    "# pytorch\n",
+    "## 定义模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "c3613bd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "from torchkeras import summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "621d33de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Net(\n",
+      "  (conv1): Conv2d(3, 32, kernel_size=(3, 3), stride=(1, 1))\n",
+      "  (pool1): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (conv2): Conv2d(32, 64, kernel_size=(5, 5), stride=(1, 1))\n",
+      "  (pool2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
+      "  (dropout): Dropout2d(p=0.1, inplace=False)\n",
+      "  (adaptive_pool): AdaptiveMaxPool2d(output_size=(1, 1))\n",
+      "  (flatten): Flatten(start_dim=1, end_dim=-1)\n",
+      "  (linear1): Linear(in_features=64, out_features=32, bias=True)\n",
+      "  (relu): ReLU()\n",
+      "  (linear2): Linear(in_features=32, out_features=1, bias=True)\n",
+      "  (sigmoid): Sigmoid()\n",
+      ")\n",
+      "--------------------------------------------------------------------------\n",
+      "Layer (type)                            Output Shape              Param #\n",
+      "==========================================================================\n",
+      "Conv2d-1                            [-1, 32, 30, 30]                  896\n",
+      "MaxPool2d-2                         [-1, 32, 15, 15]                    0\n",
+      "Conv2d-3                            [-1, 64, 11, 11]               51,264\n",
+      "MaxPool2d-4                           [-1, 64, 5, 5]                    0\n",
+      "Dropout2d-5                           [-1, 64, 5, 5]                    0\n",
+      "AdaptiveMaxPool2d-6                   [-1, 64, 1, 1]                    0\n",
+      "Flatten-7                                   [-1, 64]                    0\n",
+      "Linear-8                                    [-1, 32]                2,080\n",
+      "ReLU-9                                      [-1, 32]                    0\n",
+      "Linear-10                                    [-1, 1]                   33\n",
+      "Sigmoid-11                                   [-1, 1]                    0\n",
+      "==========================================================================\n",
+      "Total params: 54,273\n",
+      "Trainable params: 54,273\n",
+      "Non-trainable params: 0\n",
+      "--------------------------------------------------------------------------\n",
+      "Input size (MB): 0.011719\n",
+      "Forward/backward pass size (MB): 0.359634\n",
+      "Params size (MB): 0.207035\n",
+      "Estimated Total Size (MB): 0.578388\n",
+      "--------------------------------------------------------------------------\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'--------------------------------------------------------------------------\\nLayer (type)                            Output Shape              Param #\\n==========================================================================\\nConv2d-1                            [-1, 32, 30, 30]                  896\\nMaxPool2d-2                         [-1, 32, 15, 15]                    0\\nConv2d-3                            [-1, 64, 11, 11]               51,264\\nMaxPool2d-4                           [-1, 64, 5, 5]                    0\\nDropout2d-5                           [-1, 64, 5, 5]                    0\\nAdaptiveMaxPool2d-6                   [-1, 64, 1, 1]                    0\\nFlatten-7                                   [-1, 64]                    0\\nLinear-8                                    [-1, 32]                2,080\\nReLU-9                                      [-1, 32]                    0\\nLinear-10                                    [-1, 1]                   33\\nSigmoid-11                                   [-1, 1]                    0\\n==========================================================================\\nTotal params: 54,273\\nTrainable params: 54,273\\nNon-trainable params: 0\\n--------------------------------------------------------------------------\\nInput size (MB): 0.011719\\nForward/backward pass size (MB): 0.359634\\nParams size (MB): 0.207035\\nEstimated Total Size (MB): 0.578388\\n--------------------------------------------------------------------------'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## 继承nn.Module基类构建自定义模型\n",
+    "\n",
+    "class Net(nn.Module):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        super(Net, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(in_channels=3,out_channels=32,kernel_size = 3)\n",
+    "        self.pool1 = nn.MaxPool2d(kernel_size = 2,stride = 2)\n",
+    "        self.conv2 = nn.Conv2d(in_channels=32,out_channels=64,kernel_size = 5)\n",
+    "        self.pool2 = nn.MaxPool2d(kernel_size = 2,stride = 2)\n",
+    "        self.dropout = nn.Dropout2d(p = 0.1)\n",
+    "        self.adaptive_pool = nn.AdaptiveMaxPool2d((1,1))\n",
+    "        self.flatten = nn.Flatten()\n",
+    "        self.linear1 = nn.Linear(64,32)\n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.linear2 = nn.Linear(32,1)\n",
+    "        self.sigmoid = nn.Sigmoid()\n",
+    "        \n",
+    "    def forward(self,x):\n",
+    "        x = self.conv1(x)\n",
+    "        x = self.pool1(x)\n",
+    "        x = self.conv2(x)\n",
+    "        x = self.pool2(x)\n",
+    "        x = self.dropout(x)\n",
+    "        x = self.adaptive_pool(x)\n",
+    "        x = self.flatten(x)\n",
+    "        x = self.linear1(x)\n",
+    "        x = self.relu(x)\n",
+    "        x = self.linear2(x)\n",
+    "        y = self.sigmoid(x)\n",
+    "        return y \n",
+    "      \n",
+    "net = Net()\n",
+    "print(net)\n",
+    "summary(net, input_shape=(3, 32, 32))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "fcd3e14c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 使用nn.Sequential按层顺序构建模型(无需定义forward方法)\n",
+    "\n",
+    "# 1.利用add_module方法\n",
+    "net = nn.Sequential()\n",
+    "net.add_module(\"conv1\",nn.Conv2d(in_channels=3,out_channels=32,kernel_size = 3))\n",
+    "net.add_module(\"pool1\",nn.MaxPool2d(kernel_size = 2,stride = 2))\n",
+    "net.add_module(\"conv2\",nn.Conv2d(in_channels=32,out_channels=64,kernel_size = 5))\n",
+    "net.add_module(\"pool2\",nn.MaxPool2d(kernel_size = 2,stride = 2))\n",
+    "net.add_module(\"dropout\",nn.Dropout2d(p = 0.1))\n",
+    "net.add_module(\"adaptive_pool\",nn.AdaptiveMaxPool2d((1,1)))\n",
+    "net.add_module(\"flatten\",nn.Flatten())\n",
+    "net.add_module(\"linear1\",nn.Linear(64,32))\n",
+    "net.add_module(\"relu\",nn.ReLU())\n",
+    "net.add_module(\"linear2\",nn.Linear(32,1))\n",
+    "net.add_module(\"sigmoid\",nn.Sigmoid())\n",
+    "# print(net)\n",
+    "\n",
+    "# 2.利用变长参数\n",
+    "net1 = nn.Sequential(\n",
+    "    nn.Conv2d(in_channels=3,out_channels=32,kernel_size = 3),\n",
+    "    nn.MaxPool2d(kernel_size = 2,stride = 2),\n",
+    "    nn.Conv2d(in_channels=32,out_channels=64,kernel_size = 5),\n",
+    "    nn.MaxPool2d(kernel_size = 2,stride = 2),\n",
+    "    nn.Dropout2d(p = 0.1),\n",
+    "    nn.AdaptiveMaxPool2d((1,1)),\n",
+    "    nn.Flatten(),\n",
+    "    nn.Linear(64,32),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(32,1),\n",
+    "    nn.Sigmoid()\n",
+    ")\n",
+    "# print(net1)\n",
+    "\n",
+    "# 3.利用OrderedDict\n",
+    "from collections import OrderedDict\n",
+    "net2 = nn.Sequential(OrderedDict(\n",
+    "          [(\"conv1\",nn.Conv2d(in_channels=3,out_channels=32,kernel_size = 3)),\n",
+    "            (\"pool1\",nn.MaxPool2d(kernel_size = 2,stride = 2)),\n",
+    "            (\"conv2\",nn.Conv2d(in_channels=32,out_channels=64,kernel_size = 5)),\n",
+    "            (\"pool2\",nn.MaxPool2d(kernel_size = 2,stride = 2)),\n",
+    "            (\"dropout\",nn.Dropout2d(p = 0.1)),\n",
+    "            (\"adaptive_pool\",nn.AdaptiveMaxPool2d((1,1))),\n",
+    "            (\"flatten\",nn.Flatten()),\n",
+    "            (\"linear1\",nn.Linear(64,32)),\n",
+    "            (\"relu\",nn.ReLU()),\n",
+    "            (\"linear2\",nn.Linear(32,1)),\n",
+    "            (\"sigmoid\",nn.Sigmoid())\n",
+    "          ])\n",
+    "        )\n",
+    "# print(net2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23c99d81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 继承nn.Module基类构建模型并辅助应用模型容器进行封装\n",
+    "\n",
+    "# 1.nn.Sequential作为模型容器\n",
+    "class Net(nn.Module):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        super(Net, self).__init__()\n",
+    "        self.conv = nn.Sequential(\n",
+    "            nn.Conv2d(in_channels=3,out_channels=32,kernel_size = 3),\n",
+    "            nn.MaxPool2d(kernel_size = 2,stride = 2),\n",
+    "            nn.Conv2d(in_channels=32,out_channels=64,kernel_size = 5),\n",
+    "            nn.MaxPool2d(kernel_size = 2,stride = 2),\n",
+    "            nn.Dropout2d(p = 0.1),\n",
+    "            nn.AdaptiveMaxPool2d((1,1))\n",
+    "        )\n",
+    "        self.dense = nn.Sequential(\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(64,32),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(32,1),\n",
+    "            nn.Sigmoid()\n",
+    "        )\n",
+    "    def forward(self,x):\n",
+    "        x = self.conv(x)\n",
+    "        y = self.dense(x)\n",
+    "        return y \n",
+    "# net = Net()\n",
+    "# print(net)\n",
+    "\n",
+    "# 2.nn.ModuleList作为模型容器\n",
+    "class Net(nn.Module):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        super(Net, self).__init__()\n",
+    "        self.layers = nn.ModuleList([\n",
+    "            nn.Conv2d(in_channels=3,out_channels=32,kernel_size = 3),\n",
+    "            nn.MaxPool2d(kernel_size = 2,stride = 2),\n",
+    "            nn.Conv2d(in_channels=32,out_channels=64,kernel_size = 5),\n",
+    "            nn.MaxPool2d(kernel_size = 2,stride = 2),\n",
+    "            nn.Dropout2d(p = 0.1),\n",
+    "            nn.AdaptiveMaxPool2d((1,1)),\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(64,32),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(32,1),\n",
+    "            nn.Sigmoid()]\n",
+    "        )\n",
+    "    def forward(self,x):\n",
+    "        for layer in self.layers:\n",
+    "            x = layer(x)\n",
+    "        return x\n",
+    "# net = Net()\n",
+    "# print(net)\n",
+    "\n",
+    "# 3.nn.ModuleDict作为模型容器\n",
+    "class Net(nn.Module):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        super(Net, self).__init__()\n",
+    "        self.layers_dict = nn.ModuleDict({\"conv1\":nn.Conv2d(in_channels=3,out_channels=32,kernel_size = 3),\n",
+    "               \"pool\": nn.MaxPool2d(kernel_size = 2,stride = 2),\n",
+    "               \"conv2\":nn.Conv2d(in_channels=32,out_channels=64,kernel_size = 5),\n",
+    "               \"dropout\": nn.Dropout2d(p = 0.1),\n",
+    "               \"adaptive\":nn.AdaptiveMaxPool2d((1,1)),\n",
+    "               \"flatten\": nn.Flatten(),\n",
+    "               \"linear1\": nn.Linear(64,32),\n",
+    "               \"relu\":nn.ReLU(),\n",
+    "               \"linear2\": nn.Linear(32,1),\n",
+    "               \"sigmoid\": nn.Sigmoid()\n",
+    "              })\n",
+    "    def forward(self,x):\n",
+    "        layers = [\"conv1\",\"pool\",\"conv2\",\"pool\",\"dropout\",\"adaptive\",\n",
+    "                  \"flatten\",\"linear1\",\"relu\",\"linear2\",\"sigmoid\"]\n",
+    "        for layer in layers:\n",
+    "            x = self.layers_dict[layer](x)\n",
+    "        return x\n",
+    "# net = Net()\n",
+    "# print(net)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5ad5606",
+   "metadata": {},
+   "source": [
+    "## 保存与加载"
    ]
   },
   {
