--- a/机器学习/1token.ipynb
+++ b/机器学习/1token.ipynb
@@ -530,6 +530,321 @@
     "\n",
     "print(\"vocab:\", vocab)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Embedding\n",
+    "## MTEB排行\n",
+    "MTEB: https://huggingface.co/spaces/mteb/leaderboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sentence_transformers import SentenceTransformer\n",
+    "model = SentenceTransformer('aspire/acge_text_embedding')\n",
+    "texts1 = [\"胡子长得太快怎么办？\"]\n",
+    "texts2 = [\"胡子长得快怎么办？\", \"怎样使胡子不浓密！\", \"香港买手表哪里好\", \"在杭州手机到哪里买\"]\n",
+    "embs1 = model.encode(texts1, normalize_embeddings=True)\n",
+    "embs2 = model.encode(texts2, normalize_embeddings=True)\n",
+    "similarity = embs1 @ embs2.T\n",
+    "print(similarity) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 获取 texts1[i] 对应的最相似 texts2[j]\n",
+    "for i in range(len(texts1)):\n",
+    "    scores = []\n",
+    "    for j in range(len(texts2)):\n",
+    "        scores.append([texts2[j], similarity[i][j]])\n",
+    "    scores = sorted(scores, key=lambda x:x[1], reverse=True)\n",
+    "\n",
+    "    print(f\"查询文本：{texts1[i]}\")\n",
+    "    for text2, score in scores:\n",
+    "        print(f\"相似文本：{text2}，打分：{score}\")\n",
+    "    print() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## milvus工具\n",
+    "- 向量数据库：专门为存储和检索向量数据而设计的数据库\n",
+    "- Milvus 是一款云原生向量数据库，它具备高可用、高性能、易拓展的特点，用于海量向量数据的实时召回\n",
+    "- [milvus官网](https://milvus.io/)\n",
+    "- [为AI而生的数据库：Milvus详解及实战](https://blog.csdn.net/lsb2002/article/details/132222947)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Topic\n",
+    "- [NLP关键词提取必备：从TFIDF到KeyBert范式原理优缺点与开源实现](https://mp.weixin.qq.com/s/H2aRyF3tNZCCOxa4Oy2JMw)\n",
+    "- [盘点 KeyBert、TextRank 等九种主流关键词提取算法原理及 Python 代码实现](https://zhuanlan.zhihu.com/p/568271135)\n",
+    "- [NLP关键词提取方法总结及实现](https://blog.csdn.net/asialee_bird/article/details/96454544)\n",
+    "  \n",
+    "## 基于词袋加权的TFIDF算法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jieba.analyse\n",
+    "text = \"美国总统拜登当地时间26日又语出惊人。据路透社报道，拜登当天在波兰的演 讲中，称俄罗斯总统普京“不能继续掌权了”。\\\n",
+    "    白宫官员随后出来解释，克里姆林宫同日 也作出回应，称“这不是由拜登决定的”。报道称，在华沙皇家城堡发表的讲话中，拜登在\\\n",
+    "    谴责普京后表示“看在上帝的份上，这个人不能继续掌权了”。对此，路透社表示，该言论引发了华盛顿方面对局势升级的担忧，美国\\\n",
+    "    一直避免直接对乌克兰进行军事干预，并明确表示不支持政权更迭。随后，一名白宫官员对拜登这番话进行解释，称拜登的言论并不\\\n",
+    "    代表华盛顿政策的转变，其目的是让世界为乌克兰问题上的长期冲突做好准备。该官员称，拜登意为“不能 允许普京对其邻国或该地区\\\n",
+    "    行使权力”，而不是在讨论普京在俄罗斯的权力或俄 罗斯的政权 更迭问题。同日，路透社称，被问及拜登这一言论时，俄罗斯总统新闻\\\n",
+    "    秘书佩斯科夫作出回应，称“这不是由拜登决定的。俄罗斯总统是由俄罗斯人选举产生的”。此前 ，俄罗斯安全会议副主席梅德韦杰夫接受\\\n",
+    "    俄媒采访时曾表示，俄特别军事行动既定目标包括实现乌克兰去军事化、去纳粹化、成为中立国家、不奉行反俄政策。俄开展特别军事行动\\\n",
+    "    首先是因为其设定的目标未能通过外交方式实现。他表示，社会调查显示，四分之三的俄罗斯民众支持在乌开展特别军事行动。西方国家企\\\n",
+    "    图通过制裁影响俄民众，煽动他们反对政府，结果适得其反。\"\n",
+    "# TF-IDF\n",
+    "jieba.analyse.extract_tags(text, topK=20, withWeight=True, allowPOS=('ns', 'n', 'vn', 'v','nr', 'nt'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 输入语料库\n",
+    "corpus = ['this is the first document',\n",
+    "        'this is the second second document',\n",
+    "        'and the third one',\n",
+    "        'is this the first document']\n",
+    "\n",
+    "words_list = list()\n",
+    "for i in range(len(corpus)):\n",
+    "    words_list.append(corpus[i].split(' '))\n",
+    "### 第一种 gensim\n",
+    "from gensim import corpora\n",
+    "# 赋给语料库中每个词(不重复的词)一个整数id\n",
+    "dic = corpora.Dictionary(words_list)\n",
+    "# print(dic.token2id)\n",
+    "# 元组中第一个元素是词语在词典中对应的id，第二个元素是词语在文档中出现的次数\n",
+    "new_corpus = [dic.doc2bow(words) for words in words_list]\n",
+    "\n",
+    "# 训练模型并保存\n",
+    "from gensim import models\n",
+    "tfidf = models.TfidfModel(new_corpus)\n",
+    "tfidf_vec = []\n",
+    "for i in range(len(corpus)):\n",
+    "    string = corpus[i]\n",
+    "    string_bow = dic.doc2bow(string.lower().split())\n",
+    "    string_tfidf = tfidf[string_bow]\n",
+    "    tfidf_vec.append(string_tfidf)\n",
+    "# 输出 词语id与词语tfidf值\n",
+    "print(tfidf_vec)\n",
+    "\n",
+    "# ### 第二种 sklearn\n",
+    "# from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "# tfidf_vec = TfidfVectorizer()\n",
+    "# tfidf_matrix = tfidf_vec.fit_transform(corpus)\n",
+    "# # 得到语料库所有不重复的词\n",
+    "# print(tfidf_vec.get_feature_names())\n",
+    "# # 得到每个单词对应的id值\n",
+    "# print(tfidf_vec.vocabulary_)\n",
+    "# # 得到每个句子所对应的向量，向量里数字的顺序是按照词语的id顺序来的\n",
+    "# print(tfidf_matrix.toarray())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 考虑词关联网络的TextRank算法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import jieba.analyse\n",
+    "text = \"美国总统拜登当地时间26日又语出惊人。据路透社报道，拜登当天在波兰的演 讲中，称俄罗斯总统普京“不能继续掌权了”。\\\n",
+    "    白宫官员随后出来解释，克里姆林宫同日 也作出回应，称“这不是由拜登决定的”。报道称，在华沙皇家城堡发表的讲话中，拜登在\\\n",
+    "    谴责普京后表示“看在上帝的份上，这个人不能继续掌权了”。对此，路透社表示，该言论引发了华盛顿方面对局势升级的担忧，美国\\\n",
+    "    一直避免直接对乌克兰进行军事干预，并明确表示不支持政权更迭。随后，一名白宫官员对拜登这番话进行解释，称拜登的言论并不\\\n",
+    "    代表华盛顿政策的转变，其目的是让世界为乌克兰问题上的长期冲突做好准备。该官员称，拜登意为“不能 允许普京对其邻国或该地区\\\n",
+    "    行使权力”，而不是在讨论普京在俄罗斯的权力或俄 罗斯的政权 更迭问题。同日，路透社称，被问及拜登这一言论时，俄罗斯总统新闻\\\n",
+    "    秘书佩斯科夫作出回应，称“这不是由拜登决定的。俄罗斯总统是由俄罗斯人选举产生的”。此前 ，俄罗斯安全会议副主席梅德韦杰夫接受\\\n",
+    "    俄媒采访时曾表示，俄特别军事行动既定目标包括实现乌克兰去军事化、去纳粹化、成为中立国家、不奉行反俄政策。俄开展特别军事行动\\\n",
+    "    首先是因为其设定的目标未能通过外交方式实现。他表示，社会调查显示，四分之三的俄罗斯民众支持在乌开展特别军事行动。西方国家企\\\n",
+    "    图通过制裁影响俄民众，煽动他们反对政府，结果适得其反。\"\n",
+    "jieba.analyse.textrank(text, topK=20, withWeight=True, allowPOS=('ns', 'n', 'vn', 'v','nr', 'nt'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 结合主题的LDA算法\n",
+    "- `sklearn`库和`genism`库"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## 英文语料库\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from nltk import pos_tag\n",
+    "from nltk.corpus import wordnet\n",
+    "\n",
+    "def get_wordnet_pos(tag):\n",
+    "    if tag.startswith('J'):\n",
+    "        return wordnet.ADJ\n",
+    "    elif tag.startswith('V'):\n",
+    "        return wordnet.VERB\n",
+    "    elif tag.startswith('N'):\n",
+    "        return wordnet.NOUN\n",
+    "    elif tag.startswith('R'):\n",
+    "        return wordnet.ADV\n",
+    "    else:\n",
+    "        return wordnet.NOUN\n",
+    "    \n",
+    "# Define the word list\n",
+    "word_list = [[\"running\", \"cars\"],[\"better\", \"driving\"]]\n",
+    "\n",
+    "# Lemmatize list of words and join\n",
+    "def lemmatize_sentence(list):\n",
+    "    lemmatizer = WordNetLemmatizer()\n",
+    "    tagged_sentence = pos_tag(list)\n",
+    "    lemmatized_sentence = [lemmatizer.lemmatize(word, get_wordnet_pos(tag)) for word, tag in tagged_sentence]\n",
+    "    return lemmatized_sentence\n",
+    "\n",
+    "# Lemmatize the word list\n",
+    "lemmatized_output = [lemmatize_sentence(word) for word in word_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim import corpora, models\n",
+    "from gensim.models import LdaModel\n",
+    "\n",
+    "# Create the term dictionary of our corpus, where every unique term is assigned an index\n",
+    "dictionary = corpora.Dictionary(lemmatized_output)\n",
+    "\n",
+    "# Convert list of documents (corpus) into Document Term Matrix using dictionary prepared above.\n",
+    "corpus = [dictionary.doc2bow(doc) for doc in lemmatized_output]\n",
+    "\n",
+    "# Create a TF-IDF model from the corpus\n",
+    "tfidf = models.TfidfModel(corpus)\n",
+    "\n",
+    "# Transform the corpus to TF-IDF\n",
+    "corpus_tfidf = tfidf[corpus]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from gensim.models import CoherenceModel\n",
+    "from tqdm import tqdm\n",
+    "# Create empty lists to store coherence and perplexity values\n",
+    "coherence_values = []\n",
+    "perplexity_values = []\n",
+    "range_topics = range(1, 6)\n",
+    "\n",
+    "# Loop through different numbers of topics\n",
+    "for num_topics in tqdm(range_topics):\n",
+    "    # Train LDA model with the given number of topics\n",
+    "    ldamodel = LdaModel(corpus_tfidf, num_topics=num_topics, id2word=dictionary, passes=50)\n",
+    "    # Calculate coherence score\n",
+    "    coherence_model = CoherenceModel(model=ldamodel, texts=lemmatized_output, dictionary=dictionary, coherence='c_v')\n",
+    "    coherence = coherence_model.get_coherence()\n",
+    "    # Calculate perplexity\n",
+    "    perplexity = ldamodel.log_perplexity(corpus_tfidf)\n",
+    "    # Append coherence and perplexity values to the lists\n",
+    "    coherence_values.append(coherence)\n",
+    "    perplexity_values.append(perplexity)\n",
+    "\n",
+    "# Plot the relationship between number of topics and coherence values\n",
+    "fig, ax1 = plt.subplots()\n",
+    "line1, = ax1.plot(range_topics, coherence_values, label='Coherence', color='blue')\n",
+    "ax1.set_xlabel('Number of Topics')\n",
+    "ax1.set_ylabel('Coherence', color='blue')\n",
+    "ax1.tick_params(axis='y', labelcolor='blue')\n",
+    "\n",
+    "# Create a second y-axis for perplexity values\n",
+    "ax2 = ax1.twinx()\n",
+    "line2, = ax2.plot(range_topics, perplexity_values, label='Perplexity', color='red')\n",
+    "ax2.set_ylabel('Perplexity', color='red')\n",
+    "ax2.tick_params(axis='y', labelcolor='red')\n",
+    "\n",
+    "# Set title and legend\n",
+    "plt.title('Coherence and Perplexity vs. Number of Topics')\n",
+    "\n",
+    "# Combine legends\n",
+    "lines = [line1, line2]\n",
+    "labels = [l.get_label() for l in lines]\n",
+    "ax1.legend(lines, labels, loc='upper right')\n",
+    "\n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 结合语义编码的KeyBert算法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keybert import KeyBERT\n",
+    "import jieba \n",
+    "\n",
+    "# model = KeyBERT('bert-base-chinese')\n",
+    "# text = \"美国总统拜登当地时间26日又语出惊人。据路透社报道，拜登当天在波兰的演 讲中，称俄罗斯总统普京“不能继续掌权了”。\\\n",
+    "# 白宫官员随后出来解释，克里姆林宫同日也作出回应，称“这不是由拜登决定的”。报道称，在华沙皇家城堡发表的讲话中，\\\n",
+    "# 拜登在谴责普京后表示“看在上帝的份上，这个人不能继续掌权了”。对此，路透社表示，该言论引发了华盛顿方面对局势升级的担忧，\\\n",
+    "# 美国一直避免直接对乌克兰进行军事干预，并明确表示不支持政权更迭。随后，一名白宫官员对拜登这番话进行解释，称拜登的言论并不代表华盛顿政策的转变，\\\n",
+    "# 其目的是让世界为乌克兰问题上的长期冲突做好准备。该官员称，拜登意为“不能 允许普京对其邻国或该地区行使权力”，\\\n",
+    "# 而不是在讨论普京在俄罗斯的权力或俄罗斯的政权 更迭问题。同日，路透社称，被问及拜登这一言论时，俄罗斯总统新闻秘书佩斯科夫作出回应，\\\n",
+    "# 称“这不是由拜登决定的。俄罗斯总统是由俄罗斯人选举产生的”。此前，俄罗斯安全会议副主席梅德韦杰夫接受俄媒采访时曾表示，\\\n",
+    "# 俄特别军事行动既定目标包括实现乌克兰去军事化、去纳粹化、成为中立国家、不奉行反俄政策。俄开展特别军事行动首先是因为其设定的目标未能通过外交方式实现。\\\n",
+    "# 他表示，社会调查显示，四分之三的俄罗斯民众支持在乌开展特别军事行动。西方国家企图通过制裁影响俄民众，煽动他们反对政府，结果适得其反。\"\n",
+    "# doc = \" \".join(jieba.cut(text))\n",
+    "\n",
+    "model = KeyBERT('bert-base-uncased')\n",
+    "doc = \"I like it very much\"\n",
+    "keywords = model.extract_keywords(doc, keyphrase_ngram_range=(1,2),  top_n=20)\n",
+    "keywords"
+   ]
   }
  ],
  "metadata": {
@@ -548,7 +863,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.19"
   },
   "orig_nbformat": 4
  },
