--- a/数据任务/nlp.ipynb
+++ b/数据任务/nlp.ipynb
@@ -492,7 +492,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 词向量与词嵌入"
+    "## 词向量（word vector）"
    ]
   },
   {
@@ -569,6 +569,72 @@
     "vocab = preprocess_text(corpus)\n",
     "vocab\n",
     "# ‘Tomorrow will be a good day’的一天的文本可以编码为：[0,1,1,0,1,1,0,1,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "词频矩阵：\n",
+      " [[1 0 1 1 0 1 1 1 0 0 0 0 0 0 1 1]\n",
+      " [1 1 0 1 0 1 0 1 0 0 0 1 1 0 0 1]\n",
+      " [1 0 0 1 1 1 1 1 1 0 0 0 0 1 0 1]\n",
+      " [1 0 0 1 0 1 0 1 0 1 1 0 0 1 0 1]]\n",
+      "TF-IDF矩阵：\n",
+      " [[0.26147089 0.         0.50105424 0.26147089 0.         0.26147089\n",
+      "  0.39503692 0.26147089 0.         0.         0.         0.\n",
+      "  0.         0.         0.50105424 0.26147089]\n",
+      " [0.24987111 0.47882569 0.         0.24987111 0.         0.24987111\n",
+      "  0.         0.24987111 0.         0.         0.         0.47882569\n",
+      "  0.47882569 0.         0.         0.24987111]\n",
+      " [0.24318358 0.         0.         0.24318358 0.46601044 0.24318358\n",
+      "  0.36740799 0.24318358 0.46601044 0.         0.         0.\n",
+      "  0.         0.36740799 0.         0.24318358]\n",
+      " [0.26147089 0.         0.         0.26147089 0.         0.26147089\n",
+      "  0.         0.26147089 0.         0.50105424 0.50105424 0.\n",
+      "  0.         0.39503692 0.         0.26147089]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import jieba\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "# 假设我们有以下的中文文档集合\n",
+    "documents = [\n",
+    "    \"今天天气不错，我们去郊游吧。\",\n",
+    "    \"今天天气不好，我们去看电影吧。\",\n",
+    "    \"今天天气真不错，我们去公园散步吧。\",\n",
+    "    \"今天天气真不错，我们去海边玩吧。\"\n",
+    "]\n",
+    "\n",
+    "# 使用jieba进行中文分词\n",
+    "def chinese_tokenizer(text):\n",
+    "    return jieba.cut(text)\n",
+    "\n",
+    "# 初始化CountVectorizer，使用jieba分词\n",
+    "vectorizer = CountVectorizer(tokenizer=chinese_tokenizer)\n",
+    "\n",
+    "# 计算词频（Term Frequency）\n",
+    "X_counts = vectorizer.fit_transform(documents)\n",
+    "\n",
+    "# 初始化TfidfVectorizer，使用jieba分词\n",
+    "tfidf_vectorizer = TfidfVectorizer(tokenizer=chinese_tokenizer)\n",
+    "\n",
+    "# 计算TF-IDF权重\n",
+    "X_tfidf = tfidf_vectorizer.fit_transform(documents)\n",
+    "\n",
+    "# 打印词频矩阵\n",
+    "print(\"词频矩阵：\\n\", X_counts.toarray())\n",
+    "\n",
+    "# 打印TF-IDF矩阵\n",
+    "print(\"TF-IDF矩阵：\\n\", X_tfidf.toarray())"
    ]
   },
   {
@@ -733,7 +799,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.8.19"
   },
   "orig_nbformat": 4
  },
