--- a/数据任务/词元.ipynb
+++ b/数据任务/词元.ipynb
@@ -5,17 +5,18 @@
    "metadata": {},
    "source": [
     "# Introduction\n",
-    "- [NLP领域中的token和tokenization](https://www.zhihu.com/question/64984731/answer/3183726323)\n",
     "- [从词到数：Tokenizer与Embedding串讲](https://zhuanlan.zhihu.com/p/631463712)\n",
-    "- Tokenization（分词） 在自然语言处理(NLP)的任务中是最基本的一步，把文本内容处理为最小基本单元即token用于后续的处理\n",
-    "- 把文本处理成token有一系列的方法，基本思想是构建一个词表通过词表一一映射进行分词，以下以分词粒度为角度进行介绍如何构建合适的词表"
+    "- **Tokenization**：将输入的文本划分为一个个**token**\n",
+    "- **embedding**：将**token**的one-hot编码转换成更dense的embedding编码"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# word（词）粒度\n",
+    "# Tokenization\n",
+    "- [NLP领域中的token和tokenization](https://www.zhihu.com/question/64984731/answer/3183726323)\n",
+    "## word（词）粒度\n",
     "- 英语通过天然的分隔符进行分词，中文通过如jieba等进行分词\n",
     "- 优点：语义明确；上下文理解\n",
     "- 缺点：长尾效应和稀有词问题；OOV的问题；形态关系和词缀关系"
@@ -25,7 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# char（字符）粒度\n",
+    "## char（字符）粒度\n",
     "- 字符为最小基本单元进行分词\n",
     "- 优点：统一处理方式；解决OOV问题\n",
     "- 缺点：语义信息不明确；处理效率低"
@@ -35,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# subword(子词)粒度\n",
+    "## subword(子词)粒度\n",
     "- 既不希望将文本切分成单独的词（太大），也不想将其切分成单个字符（太小），而是希望得到介于词和字符之间的子词单元\n",
     "- 在BERT时代，`WordPiece` 分词方法被广泛应用，比如 BERT、DistilBERT等\n",
     "- 在大语言模型时代，最常用的分词方法是`Byte-Pair Encoding (BPE)`和`Byte-level BPE(BBPE)`\n",
@@ -47,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## WordPiece\n",
+    "### WordPiece\n",
     "- 核心思想是将单词拆分成多个前缀符号（比如BERT中的##）最小单元，再通过子词合并规则将最小单元进行合并为子词级别\n",
     "- 核心步骤如下：\n",
     "  - 计算初始词表\n",
@@ -241,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Byte-Pair Encoding (BPE)\n",
+    "### Byte-Pair Encoding (BPE)\n",
     "- 核心思想是逐步合并出现频率最高的子词对而不是像Wordpiece计算合并分数，从而构建出一个词汇表\n",
     "- 核心步骤如下：\n",
     "  - 计算初始词表\n",
@@ -420,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Byte-level BPE(BBPE)\n",
+    "### Byte-level BPE(BBPE)\n",
     "- Unicode 是字符集，为每个字符分配唯一的代码点\n",
     "- UTF-8 是一种基于 Unicode 的字符编码方式，用于在计算机中存储和传输字符\n",
     "- Byte(字节)：计算机存储和数据处理时，字节是最小的单位，一个字节包含8个(Bit)二进制位,一个字节能表示的范围是`256`\n",
@@ -592,19 +593,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Topic\n",
+    "# 关键词提取\n",
     "- [NLP关键词提取必备：从TFIDF到KeyBert范式原理优缺点与开源实现](https://mp.weixin.qq.com/s/H2aRyF3tNZCCOxa4Oy2JMw)\n",
     "- [盘点 KeyBert、TextRank 等九种主流关键词提取算法原理及 Python 代码实现](https://zhuanlan.zhihu.com/p/568271135)\n",
     "- [NLP关键词提取方法总结及实现](https://blog.csdn.net/asialee_bird/article/details/96454544)\n",
-    "  \n",
     "## 基于词袋加权的TFIDF算法"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Loading model from cache C:\\Users\\Lenovo\\AppData\\Local\\Temp\\jieba.cache\n",
+      "Loading model cost 0.531 seconds.\n",
+      "Prefix dict has been built successfully.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('俄罗斯', 0.3118400196635),\n",
+       " ('普京', 0.2536227751751428),\n",
+       " ('路透社', 0.19182680917714287),\n",
+       " ('军事行动', 0.186833445036),\n",
+       " ('乌克兰', 0.17846836328142857),\n",
+       " ('总统', 0.17652694020771428),\n",
+       " ('言论', 0.16598184767057142),\n",
+       " ('表示', 0.1397577380592857),\n",
+       " ('掌权', 0.13398412964185713),\n",
+       " ('白宫', 0.12738672900385714),\n",
+       " ('官员', 0.12492367635407142),\n",
+       " ('华盛顿', 0.11253185798585714),\n",
+       " ('回应', 0.10643153185471428),\n",
+       " ('民众', 0.10102807971899999),\n",
+       " ('中立国家', 0.09433950336714286),\n",
+       " ('政权', 0.09042455812585715),\n",
+       " ('斯科夫', 0.08649227273357143),\n",
+       " ('开展', 0.08633691124385715),\n",
+       " ('不能', 0.08550353216785714),\n",
+       " ('份上', 0.08539119644928571)]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import jieba.analyse\n",
     "text = \"美国总统拜登当地时间26日又语出惊人。据路透社报道，拜登当天在波兰的演 讲中，称俄罗斯总统普京“不能继续掌权了”。\\\n",
@@ -618,54 +658,8 @@
     "    首先是因为其设定的目标未能通过外交方式实现。他表示，社会调查显示，四分之三的俄罗斯民众支持在乌开展特别军事行动。西方国家企\\\n",
     "    图通过制裁影响俄民众，煽动他们反对政府，结果适得其反。\"\n",
     "# TF-IDF\n",
-    "jieba.analyse.extract_tags(text, topK=20, withWeight=True, allowPOS=('ns', 'n', 'vn', 'v','nr', 'nt'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 输入语料库\n",
-    "corpus = ['this is the first document',\n",
-    "        'this is the second second document',\n",
-    "        'and the third one',\n",
-    "        'is this the first document']\n",
-    "\n",
-    "words_list = list()\n",
-    "for i in range(len(corpus)):\n",
-    "    words_list.append(corpus[i].split(' '))\n",
-    "### 第一种 gensim\n",
-    "from gensim import corpora\n",
-    "# 赋给语料库中每个词(不重复的词)一个整数id\n",
-    "dic = corpora.Dictionary(words_list)\n",
-    "# print(dic.token2id)\n",
-    "# 元组中第一个元素是词语在词典中对应的id，第二个元素是词语在文档中出现的次数\n",
-    "new_corpus = [dic.doc2bow(words) for words in words_list]\n",
-    "\n",
-    "# 训练模型并保存\n",
-    "from gensim import models\n",
-    "tfidf = models.TfidfModel(new_corpus)\n",
-    "tfidf_vec = []\n",
-    "for i in range(len(corpus)):\n",
-    "    string = corpus[i]\n",
-    "    string_bow = dic.doc2bow(string.lower().split())\n",
-    "    string_tfidf = tfidf[string_bow]\n",
-    "    tfidf_vec.append(string_tfidf)\n",
-    "# 输出 词语id与词语tfidf值\n",
-    "print(tfidf_vec)\n",
-    "\n",
-    "# ### 第二种 sklearn\n",
-    "# from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "# tfidf_vec = TfidfVectorizer()\n",
-    "# tfidf_matrix = tfidf_vec.fit_transform(corpus)\n",
-    "# # 得到语料库所有不重复的词\n",
-    "# print(tfidf_vec.get_feature_names())\n",
-    "# # 得到每个单词对应的id值\n",
-    "# print(tfidf_vec.vocabulary_)\n",
-    "# # 得到每个句子所对应的向量，向量里数字的顺序是按照词语的id顺序来的\n",
-    "# print(tfidf_matrix.toarray())"
+    "jieba.analyse.extract_tags(text, topK=20, withWeight=True, allowPOS=('ns', 'n', 'vn', 'v','nr', 'nt'))\n",
+    "# withWeight，当设置为 True 时，它会使用 TextRank 算法来计算关键词的重要性得分"
    ]
   },
   {
@@ -677,9 +671,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('俄罗斯', 1.0),\n",
+       " ('表示', 0.814487158448448),\n",
+       " ('普京', 0.6186980825111877),\n",
+       " ('总统', 0.5566981083583048),\n",
+       " ('乌克兰', 0.5444185252285827),\n",
+       " ('不能', 0.4551057696773949),\n",
+       " ('实现', 0.43825213813627867),\n",
+       " ('官员', 0.41551314966922487),\n",
+       " ('华盛顿', 0.4099423976893444),\n",
+       " ('军事行动', 0.4084047245015465),\n",
+       " ('言论', 0.3931025309127227),\n",
+       " ('民众', 0.367154284143075),\n",
+       " ('进行', 0.3599413337375733),\n",
+       " ('政策', 0.2874849474541063),\n",
+       " ('问题', 0.28241812756236145),\n",
+       " ('未能', 0.27536496876800404),\n",
+       " ('路透社', 0.27518649210713825),\n",
+       " ('回应', 0.2750299079863733),\n",
+       " ('作出', 0.27353643806493844),\n",
+       " ('继续', 0.27137798625510273)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import jieba.analyse\n",
     "text = \"美国总统拜登当地时间26日又语出惊人。据路透社报道，拜登当天在波兰的演 讲中，称俄罗斯总统普京“不能继续掌权了”。\\\n",
@@ -823,9 +847,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Download\\Miniconda\\envs\\demo\\lib\\site-packages\\sentence_transformers\\cross_encoder\\CrossEncoder.py:11: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "  from tqdm.autonotebook import tqdm, trange\n",
+      "No sentence-transformers model found with name bert-base-uncased. Creating a new one with mean pooling.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[('like', 0.4824)]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from keybert import KeyBERT\n",
     "import jieba \n",
@@ -847,6 +891,13 @@
     "keywords = model.extract_keywords(doc, keyphrase_ngram_range=(1,2),  top_n=20)\n",
     "keywords"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
