--- a/数据任务/nlp.ipynb
+++ b/数据任务/nlp.ipynb
@@ -781,6 +781,35 @@
     "print(model.wv.get_vector('potato'),'\\n')\n",
     "len(model.wv.index_to_key)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Word2Vec模型的保存和加载\n",
+    "from gensim.models import Word2Vec\n",
+    "import jieba\n",
+    "\n",
+    "# 示例文本数据\n",
+    "sentences = [\"月之暗面科技有限公司是一家位于中国的人工智能公司。\", \"人工智能正在改变世界。\"]\n",
+    "\n",
+    "# 分词\n",
+    "sentences = [list(jieba.cut(sentence)) for sentence in sentences]\n",
+    "\n",
+    "# 训练Word2Vec模型\n",
+    "model = Word2Vec(sentences, vector_size=100, window=5, min_count=1, workers=4)\n",
+    "\n",
+    "# 检查词汇表并获取向量\n",
+    "word = '人工智能'\n",
+    "if word in model.wv:\n",
+    "    vector = model.wv[word]\n",
+    "    print(\"向量:\", vector)\n",
+    "else:\n",
+    "    print(f\"词 '{word}' 不在词汇表中。\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
