--- a/模型算法策略/算法策略.ipynb
+++ b/模型算法策略/算法策略.ipynb
@@ -53,11 +53,51 @@
     "optimizer.step()\n",
     "scheduler.step()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 定义L1正则化的函数\n",
+    "def l1_penalty(params, lamb):\n",
+    "    l1_norm = sum(p.abs().sum() for p in params)\n",
+    "    return lamb * l1_norm\n",
+    "\n",
+    "# 定义模型\n",
+    "model = nn.Sequential(\n",
+    "    nn.Linear(10, 5),\n",
+    "    nn.ReLU(),\n",
+    "    nn.Linear(5, 1)\n",
+    ")\n",
+    "\n",
+    "# 定义损失函数\n",
+    "criterion = nn.MSELoss()\n",
+    "\n",
+    "# 定义优化器\n",
+    "optimizer = optim.SGD(model.parameters(), lr=0.01)\n",
+    "\n",
+    "# 在训练循环中添加L1正则化\n",
+    "for epoch in range(num_epochs):\n",
+    "    optimizer.zero_grad()\n",
+    "    outputs = model(inputs)\n",
+    "    loss = criterion(outputs, targets)\n",
+    "    loss += l1_penalty(model.parameters(), lamb=0.01)  # 0.01是L1正则化系数\n",
+    "    loss.backward()\n",
+    "    optimizer.step()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "demo",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
