--- a/数据任务/词元.ipynb
+++ b/数据任务/词元.ipynb
@@ -536,11 +536,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Embedding\n",
-    "## 中文的词向量\n",
-    "Chinese Word Vectors 中文词向量:https://github.com/Embedding/Chinese-Word-Vectors\n",
-    "## MTEB排行\n",
-    "MTEB: https://huggingface.co/spaces/mteb/leaderboard"
+    "# Embedding"
    ]
   },
   {
