--- a/模型算法策略/算法策略.ipynb
+++ b/模型算法策略/算法策略.ipynb
@@ -87,6 +87,17 @@
     "    loss.backward()\n",
     "    optimizer.step()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Layer−>BatchNorm−>Activation\n",
+    "# Layer−>Activation−>LayerNorm\n",
+    "# Layer−>Activation−>BatchNorm(可选)−>Dropout"
+   ]
   }
  ],
  "metadata": {
