--- a/基础/框架.ipynb
+++ b/基础/框架.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NLP"
+    "# NLP\n",
+    "- huggingface下transformers库的分词工具：Tokenizer快速使用\n",
+    "- 安装torchtext时需要考虑对应版本的问题：\n",
+    "  - pytroch的的版本为1.a.b，则torchtext的版本为0.(a+1).b\n",
+    "  - 若pytorch == 1.13.1，则pip install torchtext == 0.14.1"
    ]
   },
   {
@@ -40,7 +44,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CV"
+    "# CV\n",
+    "- Pytorch Image Models (timm)有常用的视觉模型：Pytorch视觉模型库--timm"
    ]
   },
   {
@@ -434,7 +439,11 @@
     "# # 加载方式 2 -- 要恢复网络模型\n",
     "# model = torch.load(\"vgg_method2.pth\")\n",
     "# vgg16 = torchvision.models.vgg16(pretrained = True)\n",
-    "# vgg16.load_state_dict(torch.load(\"vgg_method2.pth\"))"
+    "# vgg16.load_state_dict(torch.load(\"vgg_method2.pth\"))\n",
+    "\n",
+    "\n",
+    "# # 释放显卡的缓存，会减慢速度\n",
+    "# torch.cuda.empty_cache()"
    ]
   },
   {
