--- a/数据任务/复现.ipynb
+++ b/数据任务/复现.ipynb
@@ -25,8 +25,7 @@
     "        x = self.fc2(x)\n",
     "        x = self.relu(x)\n",
     "        x = self.fc3(x)\n",
-    "        return x\n",
-    "s"
+    "        return x"
    ]
   }
  ],
@@ -37,7 +36,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.19"
   }
  },
