--- a/基础数据任务/nlp_词元.ipynb
+++ b/基础数据任务/nlp_词元.ipynb
@@ -898,7 +898,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "study",
+   "display_name": "demo",
    "language": "python",
    "name": "python3"
   },
