--- a/基础数据任务/框架.ipynb
+++ b/基础数据任务/框架.ipynb
@@ -13,21 +13,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "18778a12-8887-43bc-a6ae-f1cac4775650",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([6, 3, 4])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "from torch import nn\n",
@@ -50,69 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "bbf210c7",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sequential(\n",
-      "  (0): Sequential(\n",
-      "    (0): Conv2d(3, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (1): ReLU(inplace=True)\n",
-      "    (2): Conv2d(64, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (3): ReLU(inplace=True)\n",
-      "    (4): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (5): Conv2d(64, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (6): ReLU(inplace=True)\n",
-      "    (7): Conv2d(128, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (8): ReLU(inplace=True)\n",
-      "    (9): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (10): Conv2d(128, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (11): ReLU(inplace=True)\n",
-      "    (12): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (13): ReLU(inplace=True)\n",
-      "    (14): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (15): ReLU(inplace=True)\n",
-      "    (16): Conv2d(256, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (17): ReLU(inplace=True)\n",
-      "    (18): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (19): Conv2d(256, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (20): ReLU(inplace=True)\n",
-      "    (21): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (22): ReLU(inplace=True)\n",
-      "    (23): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (24): ReLU(inplace=True)\n",
-      "    (25): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (26): ReLU(inplace=True)\n",
-      "    (27): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "    (28): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (29): ReLU(inplace=True)\n",
-      "    (30): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (31): ReLU(inplace=True)\n",
-      "    (32): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (33): ReLU(inplace=True)\n",
-      "    (34): Conv2d(512, 512, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
-      "    (35): ReLU(inplace=True)\n",
-      "    (36): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "  )\n",
-      "  (1): AdaptiveAvgPool2d(output_size=(7, 7))\n",
-      ")\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([2, 512, 7, 7])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "## 加载CV领域的模型结构（方法一）\n",
     "\n",
@@ -138,7 +66,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3646f34f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +78,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2805ff7",
    "metadata": {},
    "source": [
     "# pytorch\n",
@@ -160,77 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "c3613bd7",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "from torch import nn\n",
-    "from torchkeras import summary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "621d33de",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Net(\n",
-      "  (conv1): Conv2d(3, 32, kernel_size=(3, 3), stride=(1, 1))\n",
-      "  (pool1): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (conv2): Conv2d(32, 64, kernel_size=(5, 5), stride=(1, 1))\n",
-      "  (pool2): MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False)\n",
-      "  (dropout): Dropout2d(p=0.1, inplace=False)\n",
-      "  (adaptive_pool): AdaptiveMaxPool2d(output_size=(1, 1))\n",
-      "  (flatten): Flatten(start_dim=1, end_dim=-1)\n",
-      "  (linear1): Linear(in_features=64, out_features=32, bias=True)\n",
-      "  (relu): ReLU()\n",
-      "  (linear2): Linear(in_features=32, out_features=1, bias=True)\n",
-      "  (sigmoid): Sigmoid()\n",
-      ")\n",
-      "--------------------------------------------------------------------------\n",
-      "Layer (type)                            Output Shape              Param #\n",
-      "==========================================================================\n",
-      "Conv2d-1                            [-1, 32, 30, 30]                  896\n",
-      "MaxPool2d-2                         [-1, 32, 15, 15]                    0\n",
-      "Conv2d-3                            [-1, 64, 11, 11]               51,264\n",
-      "MaxPool2d-4                           [-1, 64, 5, 5]                    0\n",
-      "Dropout2d-5                           [-1, 64, 5, 5]                    0\n",
-      "AdaptiveMaxPool2d-6                   [-1, 64, 1, 1]                    0\n",
-      "Flatten-7                                   [-1, 64]                    0\n",
-      "Linear-8                                    [-1, 32]                2,080\n",
-      "ReLU-9                                      [-1, 32]                    0\n",
-      "Linear-10                                    [-1, 1]                   33\n",
-      "Sigmoid-11                                   [-1, 1]                    0\n",
-      "==========================================================================\n",
-      "Total params: 54,273\n",
-      "Trainable params: 54,273\n",
-      "Non-trainable params: 0\n",
-      "--------------------------------------------------------------------------\n",
-      "Input size (MB): 0.011719\n",
-      "Forward/backward pass size (MB): 0.359634\n",
-      "Params size (MB): 0.207035\n",
-      "Estimated Total Size (MB): 0.578388\n",
-      "--------------------------------------------------------------------------\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'--------------------------------------------------------------------------\\nLayer (type)                            Output Shape              Param #\\n==========================================================================\\nConv2d-1                            [-1, 32, 30, 30]                  896\\nMaxPool2d-2                         [-1, 32, 15, 15]                    0\\nConv2d-3                            [-1, 64, 11, 11]               51,264\\nMaxPool2d-4                           [-1, 64, 5, 5]                    0\\nDropout2d-5                           [-1, 64, 5, 5]                    0\\nAdaptiveMaxPool2d-6                   [-1, 64, 1, 1]                    0\\nFlatten-7                                   [-1, 64]                    0\\nLinear-8                                    [-1, 32]                2,080\\nReLU-9                                      [-1, 32]                    0\\nLinear-10                                    [-1, 1]                   33\\nSigmoid-11                                   [-1, 1]                    0\\n==========================================================================\\nTotal params: 54,273\\nTrainable params: 54,273\\nNon-trainable params: 0\\n--------------------------------------------------------------------------\\nInput size (MB): 0.011719\\nForward/backward pass size (MB): 0.359634\\nParams size (MB): 0.207035\\nEstimated Total Size (MB): 0.578388\\n--------------------------------------------------------------------------'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "from torchkeras import summary\n",
+    "\n",
     "## 继承nn.Module基类构建自定义模型\n",
     "\n",
     "class Net(nn.Module):\n",
@@ -265,16 +128,8 @@
     "      \n",
     "net = Net()\n",
     "print(net)\n",
-    "summary(net, input_shape=(3, 32, 32))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "fcd3e14c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "summary(net, input_shape=(3, 32, 32))\n",
+    "\n",
     "## 使用nn.Sequential按层顺序构建模型(无需定义forward方法)\n",
     "\n",
     "# 1.利用add_module方法\n",
@@ -324,16 +179,8 @@
     "            (\"sigmoid\",nn.Sigmoid())\n",
     "          ])\n",
     "        )\n",
-    "# print(net2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "23c99d81",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# print(net2)\n",
+    "\n",
     "## 继承nn.Module基类构建模型并辅助应用模型容器进行封装\n",
     "\n",
     "# 1.nn.Sequential作为模型容器\n",
@@ -416,39 +263,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5ad5606",
-   "metadata": {},
-   "source": [
-    "## 保存与加载"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "9637d5e8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # 保存方法 1 \n",
-    "# torch.save(vgg16,\"vgg16_method1.pth\") # 保存结构模型和参数\n",
-    "# # 加载模型 1\n",
-    "# model = torch.load(\"vgg16_method1.pth\")\n",
-    "\n",
-    "# # 保存方式 2 -- 以字典方式只保存参数（官方推荐),\n",
-    "# torch.save(vgg16.state_dict(),\"vgg_method2.pth\") \n",
-    "# # 加载方式 2 -- 要恢复网络模型\n",
-    "# model = torch.load(\"vgg_method2.pth\")\n",
-    "# vgg16 = torchvision.models.vgg16(pretrained = True)\n",
-    "# vgg16.load_state_dict(torch.load(\"vgg_method2.pth\"))\n",
-    "\n",
-    "\n",
-    "# # 释放显卡的缓存，会减慢速度\n",
-    "# torch.cuda.empty_cache()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c24c0c81",
    "metadata": {},
    "source": [
     "## 梯度和求导\n",
@@ -457,34 +271,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "a4c44072",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=====backward=====\n",
-      "requires_grad:  True True True True\n",
-      "is_leaf:  True False False False\n",
-      "grad:  tensor(7.) None None None\n",
-      "=====autograd.grad=====\n",
-      "requires_grad:  True True True True\n",
-      "is_leaf:  True False False False\n",
-      "grad:  None None None None\n",
-      "(tensor(7.),)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\Download\\Miniconda\\envs\\pt1.12\\lib\\site-packages\\torch\\_tensor.py:1083: UserWarning: The .grad attribute of a Tensor that is not a leaf Tensor is being accessed. Its .grad attribute won't be populated during autograd.backward(). If you indeed want the .grad field to be populated for a non-leaf Tensor, use .retain_grad() on the non-leaf Tensor. If you access the non-leaf Tensor by mistake, make sure you access the leaf Tensor instead. See github.com/pytorch/pytorch/pull/30531 for more informations. (Triggered internally at  C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\build\\aten\\src\\ATen/core/TensorBody.h:482.)\n",
-      "  return self._grad\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch    \n",
     "\n",
@@ -512,29 +301,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "99911a01",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=====backward=====\n",
-      "tensor(12.) tensor(4.)\n",
-      "=====autograd.grad=====\n",
-      "(tensor(12.),)\n",
-      "=====保留计算图，求偏导=====\n",
-      "(tensor(12.),) (tensor(4.),)\n",
-      "=====autograd.grad,二阶求导=====\n",
-      "(tensor(12., grad_fn=<AddBackward0>),) (tensor(6.),)\n",
-      "=====autograd.grad() + backward(),二阶求导=====\n",
-      "tensor(6.) tensor(4.) None None\n",
-      "=====backward() + autograd.grad(),二阶求导=====\n",
-      "(tensor(6.),) tensor(12., grad_fn=<CopyBackwards>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"=====backward=====\")\n",
     "x = torch.tensor(2., requires_grad=True)\n",
@@ -586,21 +355,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "de038c91",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=====backward() + backward(),二阶求导=====\n",
-      "tensor(18., grad_fn=<CopyBackwards>)\n",
-      "=====梯度清零,二阶求导=====\n",
-      "tensor(6., grad_fn=<CopyBackwards>)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 梯度清零\n",
     "print(\"=====backward() + backward(),二阶求导=====\")\n",
@@ -623,20 +380,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "dae5d3ba",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([2., 4.])\n",
-      "=====求导计算的雅可比矩阵=====\n",
-      "tensor([2., 4.])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 向量求导: 只能标量对标量，标量对向量求梯度\n",
     "x = torch.tensor([1., 2.]).requires_grad_()\n",
@@ -655,20 +401,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "873a26b4",
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "requires_grad:  True False True True\n",
-      "is_leaf:  True True False False\n",
-      "grad:  tensor([3.]) None None None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 使用detach()切断\n",
     "x = torch.tensor([2.] ,requires_grad=True)\n",
@@ -682,18 +417,125 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# vit_pytorch\n",
+    "- https://github.com/lucidrains/vit-pytorch"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b334102",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from vit_pytorch import ViT\n",
+    "\n",
+    "v = ViT(\n",
+    "    image_size = 256,\n",
+    "    patch_size = 32,\n",
+    "    num_classes = 1000,\n",
+    "    dim = 1024,\n",
+    "    depth = 6,\n",
+    "    heads = 16,\n",
+    "    mlp_dim = 2048,\n",
+    "    dropout = 0.1,\n",
+    "    emb_dropout = 0.1\n",
+    ")\n",
+    "\n",
+    "img = torch.randn(1, 3, 256, 256)\n",
+    "\n",
+    "preds = v(img) # (1, 1000)\n",
+    "preds.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# wandb  \n",
+    "- https://wandb.ai/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import wandb\n",
+    "import random\n",
+    "\n",
+    "# start a new wandb run to track this script\n",
+    "wandb.init(settings=wandb.Settings(start_method=\"thread\"))\n",
+    "wandb.init(\n",
+    "    # set the wandb project where this run will be logged\n",
+    "    project=\"my-awesome-project\",\n",
+    "    \n",
+    "    # track hyperparameters and run metadata\n",
+    "    config={\n",
+    "    \"learning_rate\": 0.02,\n",
+    "    \"architecture\": \"CNN\",\n",
+    "    \"dataset\": \"CIFAR-100\",\n",
+    "    \"epochs\": 10,\n",
+    "    }\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# simulate training\n",
+    "epochs = 10\n",
+    "offset = random.random() / 5\n",
+    "for epoch in range(2, epochs):\n",
+    "    acc = 1 - 2 ** -epoch - random.random() / epoch - offset\n",
+    "    loss = 2 ** -epoch + random.random() / epoch + offset\n",
+    "    \n",
+    "    # log metrics to wandb\n",
+    "    wandb.log({\"acc\": acc, \"loss\": loss})\n",
+    "    \n",
+    "# [optional] finish the wandb run, necessary in notebooks\n",
+    "wandb.finish()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# AutoGluon \n",
+    "- https://auto.gluon.ai/stable/index.html\n",
+    "- Tabular\n",
+    "- Multimodal\n",
+    "- Time Series\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from autogluon.tabular import TabularDataset, TabularPredictor\n",
+    "\n",
+    "data_root = '../data/autogluon/'\n",
+    "train_data = TabularDataset(data_root + 'train.csv')\n",
+    "test_data = TabularDataset(data_root + 'test.csv')\n",
+    "\n",
+    "predictor = TabularPredictor(label='class').fit(train_data=train_data)# hyperparameters='multimodal',num_stack_levels=1, num_bagging_folds=5\n",
+    "predictions = predictor.predict(data=test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
-  "hide_input": false,
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "demo",
    "language": "python",
    "name": "python3"
   },
@@ -707,58 +549,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
-  },
-  "toc": {
-   "base_numbering": 1,
-   "nav_menu": {},
-   "number_sections": true,
-   "sideBar": true,
-   "skip_h1_title": false,
-   "title_cell": "Table of Contents",
-   "title_sidebar": "Contents",
-   "toc_cell": false,
-   "toc_position": {},
-   "toc_section_display": true,
-   "toc_window_display": true
-  },
-  "toc-autonumbering": true,
-  "toc-showmarkdowntxt": false,
-  "varInspector": {
-   "cols": {
-    "lenName": 16,
-    "lenType": 16,
-    "lenVar": 40
-   },
-   "kernels_config": {
-    "python": {
-     "delete_cmd_postfix": "",
-     "delete_cmd_prefix": "del ",
-     "library": "var_list.py",
-     "varRefreshCmd": "print(var_dic_list())"
-    },
-    "r": {
-     "delete_cmd_postfix": ") ",
-     "delete_cmd_prefix": "rm(",
-     "library": "var_list.r",
-     "varRefreshCmd": "cat(var_dic_list()) "
-    }
-   },
-   "types_to_exclude": [
-    "module",
-    "function",
-    "builtin_function_or_method",
-    "instance",
-    "_Feature"
-   ],
-   "window_display": false
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "bfd284e930bc93997eea298487d531cdfdbc0f39007072028ce7af8882c61801"
-   }
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
