--- a/基础数据任务/nlp_步骤.ipynb
+++ b/基础数据任务/nlp_步骤.ipynb
@@ -1,15 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 字符串处理\n",
-    "- 正则表达式用于字符或字符串匹配，可以查找和替换字符或字符串"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -492,7 +483,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 词向量（word vector）"
+    "## 词表示(word representation)"
    ]
   },
   {
@@ -500,7 +491,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 传统文本表示方法\n",
+    "### 传统文本表示方法（离散式）\n",
     "**One-hot**  \n",
     "将每一个*单词*使用一个离散的向量表示\n",
     "首先对所有句子的字进行索引，即将每个字确定一个编号：\n",
@@ -655,7 +646,10 @@
     "  \n",
     "**Glove** \n",
     "- 与Word2vec不同，Glove利用了单词的全局共现，而不仅仅是局部上下文\n",
-    "- 有许多在大规模语料库经过预训练的，具有不同向量长度的预训练词向量，例如Glove，fasttext等"
+    "- 有许多在大规模语料库经过预训练的，具有不同向量长度的预训练词向量，例如Glove，fasttext等\n",
+    "\n",
+    "**NNLM**\n",
+    "- 利用n-1个单词来预测第n个单词"
    ]
   },
   {
@@ -810,11 +804,203 @@
     "    print(f\"词 '{word}' 不在词汇表中。\")\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "未去重词表： ['i', 'like', 'dog', 'i', 'love', 'coffee', 'i', 'hate', 'milk']\n",
+      "去重词表： ['milk', 'coffee', 'hate', 'dog', 'love', 'i', 'like']\n",
+      "单词索引： {'milk': 0, 'coffee': 1, 'hate': 2, 'dog': 3, 'love': 4, 'i': 5, 'like': 6}\n",
+      "索引单词： {0: 'milk', 1: 'coffee', 2: 'hate', 3: 'dog', 4: 'love', 5: 'i', 6: 'like'}\n",
+      "单词总数： 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "### NNLM示例代码：https://www.cnblogs.com/jyroy/p/14726894.html\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import torch.utils.data as Data\n",
+    "from torch.autograd import Variable\n",
+    "dtype = torch.FloatTensor\n",
+    "\n",
+    "sentences = [\"i like dog\", \"i love coffee\", \"i hate milk\"]  # 句子数据集\n",
+    "n_steps = 2  # 用前几个单词来预测下一个单词，e.g. 2个\n",
+    "n_hidden = 2  # 隐藏层的节点个数，e.g. 2个\n",
+    "m = 2  # 词向量的长度\n",
+    "\n",
+    "word_list = \" \".join(sentences).split(\" \")  # 获取所有的单词\n",
+    "print(\"未去重词表：\", word_list)\n",
+    "word_list = list(set(word_list))  # 去重\n",
+    "print(\"去重词表：\", word_list)\n",
+    "word_dict = {w: i for i, w in enumerate(word_list)}  # 单词->索引\n",
+    "print(\"单词索引：\", word_dict)\n",
+    "number_dict = {i: w for i, w in enumerate(word_list)}  # 索引->单词\n",
+    "print(\"索引单词：\", number_dict)\n",
+    "num_words = len(word_dict)  # 单词总数\n",
+    "print(\"单词总数：\", num_words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_batch: tensor([[5, 6],\n",
+      "        [5, 4],\n",
+      "        [5, 2]])\n",
+      "target_batch: tensor([3, 1, 0])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 模型结构\n",
+    "class NNLM(nn.Module):\n",
+    "  # NNLM model architecture\n",
+    "  def __init__(self):\n",
+    "    super(NNLM, self).__init__()\n",
+    "    self.C = nn.Embedding(num_embeddings = num_words, embedding_dim = m)  # 词表\n",
+    "    self.d = nn.Parameter(torch.randn(n_hidden).type(dtype))  # 隐藏层的偏置\n",
+    "    self.H = nn.Parameter(torch.randn(n_steps * m, n_hidden).type(dtype))  # 输入层到隐藏层的权重\n",
+    "    self.U = nn.Parameter(torch.randn(n_hidden, num_words).type(dtype))  # 隐藏层到输出层的权重\n",
+    "    self.b = nn.Parameter(torch.randn(num_words).type(dtype))  # 输出层的偏置\n",
+    "    self.W = nn.Parameter(torch.randn(n_steps * m, num_words).type(dtype))  # 输入层到输出层的权重\n",
+    "\n",
+    "  def forward(self, input):\n",
+    "    '''\n",
+    "    input: [batchsize, n_steps] \n",
+    "    x: [batchsize, n_steps*m]\n",
+    "    hidden_layer: [batchsize, n_hidden]\n",
+    "    output: [batchsize, num_words]\n",
+    "    '''\n",
+    "    x = self.C(input)  # 获得一个batch的词向量的词表\n",
+    "    x = x.view(-1, n_steps * m)\n",
+    "    hidden_out = torch.tanh(torch.mm(x, self.H) + self.d)  # 获取隐藏层输出\n",
+    "    output = torch.mm(x, self.W) + torch.mm(hidden_out, self.U) + self.b  # 获得输出层输出\n",
+    "    return output\n",
+    "  \n",
+    "# 格式化输入数据\n",
+    "def make_batch(sentences):\n",
+    "  '''\n",
+    "  input_batch：一组batch中前n_steps个单词的索引\n",
+    "  target_batch：一组batch中每句话待预测单词的索引\n",
+    "  '''\n",
+    "  input_batch = []\n",
+    "  target_batch = []\n",
+    "  for sentence in sentences:\n",
+    "    word = sentence.split()\n",
+    "    input = [word_dict[w] for w in word[:-1]]\n",
+    "    target = word_dict[word[-1]]\n",
+    "    input_batch.append(input)\n",
+    "    target_batch.append(target)\n",
+    "  return input_batch, target_batch\n",
+    "\n",
+    "input_batch, target_batch = make_batch(sentences)\n",
+    "input_batch = torch.LongTensor(input_batch)\n",
+    "target_batch = torch.LongTensor(target_batch)\n",
+    "print(\"input_batch:\", input_batch)\n",
+    "print(\"target_batch:\", target_batch)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch:100 Loss:3.231\n",
+      "Epoch:200 Loss:2.375\n",
+      "Epoch:300 Loss:1.739\n",
+      "Epoch:400 Loss:1.158\n",
+      "Epoch:500 Loss:0.680\n",
+      "Epoch:600 Loss:0.404\n",
+      "Epoch:700 Loss:0.255\n",
+      "Epoch:800 Loss:0.173\n",
+      "Epoch:900 Loss:0.125\n",
+      "Epoch:1000 Loss:0.094\n",
+      "Epoch:1100 Loss:0.074\n",
+      "Epoch:1200 Loss:0.059\n",
+      "Epoch:1300 Loss:0.049\n",
+      "Epoch:1400 Loss:0.041\n",
+      "Epoch:1500 Loss:0.034\n",
+      "Epoch:1600 Loss:0.029\n",
+      "Epoch:1700 Loss:0.026\n",
+      "Epoch:1800 Loss:0.022\n",
+      "Epoch:1900 Loss:0.020\n",
+      "Epoch:2000 Loss:0.017\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 训练模型\n",
+    "model = NNLM()\n",
+    "\n",
+    "criterion = nn.CrossEntropyLoss()  # 使用cross entropy作为loss function\n",
+    "optimizer = optim.Adam(model.parameters(), lr = 0.001)  # 使用Adam作为optimizer\n",
+    "\n",
+    "for epoch in range(2000):\n",
+    "  # 梯度清零\n",
+    "  optimizer.zero_grad()\n",
+    "  # 计算predication\n",
+    "  output = model(input_batch)\n",
+    "  # 计算loss\n",
+    "  loss = criterion(output, target_batch)\n",
+    "  if (epoch + 1) % 100 == 0:\n",
+    "    print(\"Epoch:{}\".format(epoch+1), \"Loss:{:.3f}\".format(loss))\n",
+    "  # 反向传播\n",
+    "  loss.backward()\n",
+    "  # 更新权重参数\n",
+    "  optimizer.step()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predict: tensor([[3],\n",
+      "        [1],\n",
+      "        [0]])\n",
+      "[['i', 'like'], ['i', 'love'], ['i', 'hate']] ----> ['dog', 'coffee', 'milk']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 推理\n",
+    "pred = model(input_batch).data.max(1, keepdim=True)[1]  # 找出概率最大的下标\n",
+    "print(\"Predict:\", pred)\n",
+    "print([sentence.split()[:2] for sentence in sentences], \"---->\", [number_dict[n.item()] for n in pred.squeeze()])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "demo",
    "language": "python",
    "name": "python3"
   },
